--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <nav class="nav-extended">
-  <div class="nav-wrapper blue">
-  <a href="#" class="brand-logo center" >Jonathan</a>
+  <div class="nav-wrapper red">
+  <a href="#" class="brand-logo center" >Jonathan PHAM</a>
   <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
   </div>
-  <div class="nav-content blue">
-      <ul class="tabs tabs-transparent">
-        <li class="tab"><a href="#">Presentation</a></li>
-        <li class="tab"><a href="">Formations </a></li>
-        <li class="tab"><a href="#test4">Expérience professionnel</a></li>
-        <li class="tab"><a href="#test4">Compétences</a></li>
+  <div class="nav-content red">
+      <ul class="tabs tabs-transparent center">
+        <li class="tab"><a href="">Presentation</a></li>
+        <li class="tab"><a href="Formations">Formations et diplômes</a></li>
+        <li class="tab"><a href="">Expériences professionnel/Projets</a></li>
+        <li class="tab"><a href="Competences">Compétences</a></li>
 
       </ul>
 </div>
@@ -19,20 +19,21 @@
 
 <router-outlet></router-outlet>
 
-<footer class="page-footer blue">
+<footer class="page-footer red">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Liens: </h5>
+          <h4 class="white-text">Plus d'informations: </h4>
           
         </div>
+        <a href="mailto:jonathan.ph@protonmail.com"><img class="theLogos" src="https://www.trentmerrin.com.au/wp-content/uploads/2018/02/email-logo-black-png-pictures-1.png"></a>
         <a href="https://www.linkedin.com/in/jonathan-pham-474668151/"><img class="theLogos" src="https://ya-webdesign.com/images250_/social-media-buttons-png-201-14.png"/></a>
-        <a href=""><img class="theLogos" src="https://image.flaticon.com/icons/svg/25/25231.svg"/></a>
+        <a href="https://github.com/Excaling"><img class="theLogos" src="https://image.flaticon.com/icons/svg/25/25231.svg"/></a>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2014 Copyright Excaling
+      © 2019 Copyright Excaling
       </div>
     </div>
   </footer>
