--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -5,11 +5,13 @@ img{
 }
 
 .boxImg{
+    margin-top: 10%;
     padding-top: 5px;
     min-height: 100%;
 }
 
 .section{
+    
     width: 99%;
 
 }
