--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   </script>
 <nav class="nav-extends red">
   <div class="nav-wrapper red">
-  <a href="" class="brand-logo" >Jonathan PHAM</a>
+  <a href="" class="brand-logo flow-text" >Jonathan PHAM</a>
   <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="">Presentation</a></li>
       <li><a href="Formations">Formations et diplômes</a></li>
@@ -18,14 +18,7 @@
     </ul>
   
   </div>
-  <div class="nav-content red" >
-      <ul  class="tabs tabs-transparent">
-        <li class="tab" ><a href="#">Presentation</a></li>
-        <li class="tab" ><a href="Formations">Formations et diplômes</a></li>
-        <li class="tab" ><a href="Projets">Expériences professionnel/Projets</a></li>
-        <li class="tab" ><a href="Competences">Compétences</a></li>
-      </ul>
-    </div>
+ 
 </nav>
 
 <router-outlet></router-outlet>
