--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,16 +29,24 @@
       <div class="row">
         <div class="col l6 s12">
           <h4 class="white-text">Plus d'informations: </h4>
-          
+          <a href="mailto:jonathan.ph@protonmail.com"><img class="theLogos" src="https://www.trentmerrin.com.au/wp-content/uploads/2018/02/email-logo-black-png-pictures-1.png"></a>
+          <a href="https://www.linkedin.com/in/jonathan-pham-474668151/"><img class="theLogos" src="https://ya-webdesign.com/images250_/social-media-buttons-png-201-14.png"/></a>
+          <a href="https://github.com/Excaling"><img class="theLogos" src="https://image.flaticon.com/icons/svg/25/25231.svg"/></a>
         </div>
-        <a href="mailto:jonathan.ph@protonmail.com"><img class="theLogos" src="https://www.trentmerrin.com.au/wp-content/uploads/2018/02/email-logo-black-png-pictures-1.png"></a>
-        <a href="https://www.linkedin.com/in/jonathan-pham-474668151/"><img class="theLogos" src="https://ya-webdesign.com/images250_/social-media-buttons-png-201-14.png"/></a>
-        <a href="https://github.com/Excaling"><img class="theLogos" src="https://image.flaticon.com/icons/svg/25/25231.svg"/></a>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Menu</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="">Presentation</a></li>
+            <li><a class="grey-text text-lighten-3" href="Formations">Formations et diplômes</a></li>
+            <li><a class="grey-text text-lighten-3" href="Projets">Expériences professionnel/Projets</a></li>
+            <li><a class="grey-text text-lighten-3" href="Competences">Compétences</a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2019 Copyright Excaling
+      © 2019 Copyright Jonathan PHAM - Réalisé sous Angular
       </div>
     </div>
   </footer>
